[package]
name = "skibidi-rizz"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.27.0"
crossterm = "0.29.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
socket2 = "0.5"
pnet = "0.35.0"
pnet_datalink = { version = "0.35.0", optional = true }
local-ip-address = "0.6"
discord-rpc-client = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["socket", "net"] }

[[bin]]
name = "skibidi-rizz"
path = "src/main.rs"